# aoc2022

./: Cargo.toml
src/: days.rs  main.rs
src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs
