[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc_lib = { git = "https://github.com/Measter/aoc_lib", rev = "c84b7a4b08c9ce015b51cc2e61392572f4762cd8" }
color-eyre = "0.6.2"
itertools = "0.10.5"
array_tool = "1.0.0"
